--- a/.env.development
+++ b/.env.development
@@ -7,7 +7,10 @@ APP_HEADER_LANGUAGE=x-custom-lang
 FRONTEND_DOMAIN=http://localhost:3000
 BACKEND_DOMAIN=http://localhost:3000
 
-DATABASE_URL=mongodb://localhost:27017/
+DATABASE_URL=mongodb+srv://supplysphere281:supply2023@cluster0.basmkza.mongodb.net/supplysphere-dev
+
+
+
 DATABASE_TYPE=mongodb
 DATABASE_NAME=supplysphere-dev
 DATABASE_HOST=localhost
