--- a/.env.development
+++ b/.env.development
@@ -7,14 +7,14 @@ APP_HEADER_LANGUAGE=x-custom-lang
 FRONTEND_DOMAIN=http://localhost:3000
 BACKEND_DOMAIN=http://localhost:3000
 
-DATABASE_URL=mongodb+srv://supplysphere281:supply2023@cluster0.basmkza.mongodb.net/supplysphere-dev
-DATABASE_TYPE=mongodb
-DATABASE_NAME=supplysphere-dev
+DATABASE_URL=
+DATABASE_TYPE=postgres
+DATABASE_NAME=postgres
 DATABASE_HOST=localhost
-DATABASE_PORT=27017
-DATABASE_USERNAME=root
-DATABASE_PASSWORD=secret
-DATABASE_NAME=supplysphere
+DATABASE_PORT=5432
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_SYNCHRONIZE=true
 DATABASE_CA=
 DATABASE_KEY=
 DATABASE_CERT=
