product crud routes developed

--- a/.env.development
+++ b/.env.development
@@ -18,6 +18,7 @@ DATABASE_SYNCHRONIZE=true
 DATABASE_CA=
 DATABASE_KEY=
 DATABASE_CERT=
+DATABASE_ENTITIES = entity/*.ts,modules/**/entity/*.ts
 
 MAIL_HOST=smtp.ethereal.email
 MAIL_PORT=587
