--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "qs": "^6.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "viem": "^2.9.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
