--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@nestjs/serve-static": "^4.0.1",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/multer": "^1.4.11",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "googleapis": "^134.0.0",
+    "multer": "^1.4.5-lts.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "qs": "^6.12.0",
