--- a/.env.development
+++ b/.env.development
@@ -18,7 +18,23 @@ DATABASE_SYNCHRONIZE=true
 DATABASE_CA=
 DATABASE_KEY=
 DATABASE_CERT=
-DATABASE_ENTITIES = entity/*.ts,modules/**/entity/*.ts
+DATABASE_ENTITIES=entity/*.ts,modules/**/entity/*.ts
+
+FILE_API_KEY=95acoobk2p9ceki
+FILE_API_SECRET=1vqxdjf6e42d1ex
+FILE_ACCESS_TOKEN=sl.Bz_mblzQCvgEfNO9_UTXCZ4620Rab9GuKspb43pTorRHVhknjs4MgugztgFJ2gW-bst-w830FciRCynowdd-83doC_J4HKOroRBfs8h2fkpKTh621lGZQedpfT5WMgLYuGY6ceMyn1AU9Rw
+
+# DATABASE_TYPE=postgres
+# DATABASE_NAME=supplysphere
+# DATABASE_HOST=supplysphere.c7si0omyc2qc.ap-south-1.rds.amazonaws.com
+# DATABASE_PORT=5432
+# DATABASE_USERNAME=postgres
+# DATABASE_PASSWORD=W53wWMKq61zf
+# DATABASE_SYNCHRONIZE=true 
+# DATABASE_KEY=
+# DATABASE_MAX_CONNECTIONS=100
+# DATABASE_SSL_ENABLED=true 
+# DATABASE_ENTITIES=entity/*.ts,modules/**/entity/*.ts
 
 MAIL_HOST=smtp.ethereal.email
 MAIL_PORT=587
