--- a/.env.development
+++ b/.env.development
@@ -7,35 +7,35 @@ APP_HEADER_LANGUAGE=x-custom-lang
 FRONTEND_DOMAIN=http://localhost:3000
 BACKEND_DOMAIN=http://localhost:3000
 
-DATABASE_URL=
-DATABASE_TYPE=postgres
-DATABASE_NAME=postgres
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=postgres
-DATABASE_SYNCHRONIZE=true
-DATABASE_CA=
-DATABASE_KEY=
-DATABASE_CERT=
-DATABASE_ENTITIES=entity/*.ts,modules/**/entity/*.ts
+# DATABASE_URL=
+# DATABASE_TYPE=postgres
+# DATABASE_NAME=postgres
+# DATABASE_HOST=localhost
+# DATABASE_PORT=5432
+# DATABASE_USERNAME=postgres
+# DATABASE_PASSWORD=postgres
+# DATABASE_SYNCHRONIZE=true
+# DATABASE_CA=
+# DATABASE_KEY=
+# DATABASE_CERT=
+# DATABASE_ENTITIES=entity/*.ts,modules/**/entity/*.ts
 
 AWS_S3_REGION=ap-south-1
 AWS_ACCESS_KEY_ID=AKIAQAFKYWYCP3BWRUFW
 AWS_SECRET_ACCESS_KEY=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
 AWS_S3_BUCKET_NAME=supplyspherebucket
 
-# DATABASE_TYPE=postgres
-# DATABASE_NAME=supplysphere
-# DATABASE_HOST=supplysphere.c7si0omyc2qc.ap-south-1.rds.amazonaws.com
-# DATABASE_PORT=5432
-# DATABASE_USERNAME=postgres
-# DATABASE_PASSWORD=W53wWMKq61zf
-# DATABASE_SYNCHRONIZE=true 
-# DATABASE_KEY=
-# DATABASE_MAX_CONNECTIONS=100
-# DATABASE_SSL_ENABLED=true 
-# DATABASE_ENTITIES=entity/*.ts,modules/**/entity/*.ts
+DATABASE_TYPE=postgres
+DATABASE_NAME=supplysphere
+DATABASE_HOST=supplysphere.c7si0omyc2qc.ap-south-1.rds.amazonaws.com
+DATABASE_PORT=5432
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=W53wWMKq61zf
+DATABASE_SYNCHRONIZE=true 
+DATABASE_KEY=
+DATABASE_MAX_CONNECTIONS=100
+DATABASE_SSL_ENABLED=true 
+DATABASE_ENTITIES=entity/*.ts,modules/**/entity/*.ts
 
 MAIL_HOST=smtp.ethereal.email
 MAIL_PORT=587
