--- a/.env.development
+++ b/.env.development
@@ -7,18 +7,18 @@ APP_HEADER_LANGUAGE=x-custom-lang
 FRONTEND_DOMAIN=http://localhost:3000
 BACKEND_DOMAIN=http://localhost:3000
 
-# DATABASE_URL=
-# DATABASE_TYPE=postgres
-# DATABASE_NAME=postgres
-# DATABASE_HOST=localhost
-# DATABASE_PORT=5432
-# DATABASE_USERNAME=postgres
-# DATABASE_PASSWORD=postgres
-# DATABASE_SYNCHRONIZE=true
-# DATABASE_CA=
-# DATABASE_KEY=
-# DATABASE_CERT=
-# DATABASE_ENTITIES=entity/*.ts,modules/**/entity/*.ts
+DATABASE_URL=
+DATABASE_TYPE=postgres
+DATABASE_NAME=postgres
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_SYNCHRONIZE=true
+DATABASE_CA=
+DATABASE_KEY=
+DATABASE_CERT=
+DATABASE_ENTITIES=entity/*.ts,modules/**/entity/*.ts
 
 AWS_S3_REGION=ap-south-1
 AWS_ACCESS_KEY_ID=AKIAQAFKYWYCP3BWRUFW
